--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -323,9 +323,9 @@
                 <tr>
                  <td></td>
                   <td class="text-right" *ngIf="!logueado">
-                    <button type="button" class="btn btn-default btn-block" routerLink="registro">Comprar con mi cuenta</button><br>
+                    <button type="button" class="btn btn-default btn-block" (click)="insertaFlagPago(1)">Comprar con mi cuenta</button><br>
                    <a href="#"><small>¿Aun no tienes cuenta?</small></a><br>
-                   <button type="button" class="btn btn-primary btn-block" routerLink="carro">Comprar como visita</button></td>
+                   <button type="button" class="btn btn-primary btn-block" (click)="insertaFlagPago(2)">Comprar como visita</button></td>
                 </tr>
                   <tr>
                  <td></td>
