--- a/src/app/components/producto/producto.component.html
+++ b/src/app/components/producto/producto.component.html
@@ -54,10 +54,10 @@
             <tr>
               <td class="col-sm-3">
                   <div class="form-group" [ngClass]="{ 'has-error': cantidadValido }">
-                    <select class="form-control" name="cantidad" #cantidadSelected id="cantidad" [(ngModel)]="cantidad" (change)="cambiaCantidad(cantidadSelected.value)">
+                 <!--   <select class="form-control" name="cantidad" #cantidadSelected id="cantidad" [(ngModel)]="cantidad" (change)="cambiaCantidad(cantidadSelected.value)">
                     <option *ngFor="let stock of producto.STOCK" [value]="stock.codigo">{{stock.nombre}}</option>
-                    </select>
-                    <div *ngIf="producto.STOCK[0].codigo==0" class="help-block">Sin Stock</div>
+                    </select>-->
+                    <div *ngIf="producto.STOCK[0].codigo==0" class="help-block">Preguntar Stock</div>
                      <div *ngIf="cantidadValido" class="help-block">Debe seleccionar una cantidad</div>
                      </div>
               </td>
@@ -107,7 +107,8 @@
                       
                       <div class="collapse in" id="collapseExample" style="text-align: left !important;" aria-expanded="true">
                         <div class="well">
-                          <br> Deja tus datos y te contactaremos con la confirmación.
+                          <br><h3>Para verificar stock,</h3><p>deja tus datos y te contactaremos con la confirmación.</p><br>
+                          
                           <br>
                           <form name="form" (ngSubmit)="f.form.valid && enviaCorreoConfirmacion()" #f="ngForm" novalidate>
                             <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !nombreCompleto.valid }">
@@ -123,6 +124,10 @@
                                 required>
                               <div *ngIf="f.submitted && !emailcliente.valid" class="help-block">Email es requerido</div>
                             </div>
+
+                            <div class="form-group">
+                               <label for="exampleInputEmail1">Cantidad de neumáticos</label>
+                                <input type="number" class="form-control" id="number" placeholder="0"> </div>
                           
                           <button type="submit" class="btn btn-default bremsen">Enviar</button>
                           </form>
