arreglos y boton nuevo

--- a/src/app/components/bremsen/bremsen.component.html
+++ b/src/app/components/bremsen/bremsen.component.html
@@ -36,13 +36,57 @@
     </div>
 </div>
 
+<div class="container">
+        <div class="pad-50">&nbsp;</div>
+    <div class="row">
+           
+        <div class="col-md-3">
+                <img src="assets/image/testimonio-01.jpg" alt="" class="img-responsive" />
+                <div class="pad-10">&nbsp;</div>
+        </div>
+
+        <div class="col-md-3">
+                <img src="assets/image/testimonio-02.jpg" alt="" class="img-responsive" />
+                <div class="pad-10">&nbsp;</div>
+        </div>
+
+        <div class="col-md-3">
+                <img src="assets/image/testimonio-03.jpg" alt="" class="img-responsive" />
+                <div class="pad-10">&nbsp;</div>
+        </div>
+
+        <div class="col-md-3">
+                <img src="assets/image/testimonio-04.jpg" alt="" class="img-responsive" />
+                <div class="pad-10">&nbsp;</div>
+        </div>
+<!--
+        <div class="col-md-4">
+                <img src="assets/image/testimonio-05.jpg" alt="" class="img-responsive" />
+                <div class="pad-10">&nbsp;</div>
+        </div>
+
+        <div class="col-md-4">
+                <img src="assets/image/testimonio-06.jpg" alt="" class="img-responsive" />
+                <div class="pad-10">&nbsp;</div>
+        </div>-->
+       
+    </div>
+    <div class="pad-50">&nbsp;</div>
+</div>
+
+
+
+
+
+
+<!--
 
     <div class="container center-block">
         <div class="row">
             <br><br><br>
     <owl-carousel #owlElement [options]="{items: 3}" [items]="" *ngIf="productos.length>0">
     
-        <!--<div class="product-thumb" *ngFor="let producto of productos" style="height:180px;">
+        <div class="product-thumb" *ngFor="let producto of productos" style="height:180px;">
             <div class="item text-center">
                 <img  style="width:300px;" src="assets/image/testimonio-01.jpg" alt="" class="img-responsive" />
             </div>
@@ -71,9 +115,11 @@
            
         </div>-->
 
+
+        <!--
         <div class="" *ngFor="let producto of productos">
-              <!--  <div class="image" style="line-height: 40px;">
-                  <a routerLink="/producto/{{producto.ID}}"><img src="assets/image/product/540x576.jpg" class="img-responsive responsivo" /></a></div>-->
+              <div class="image" style="line-height: 40px;">
+                  <a routerLink="/producto/{{producto.ID}}"><img src="assets/image/product/540x576.jpg" class="img-responsive responsivo" /></a></div>
               <div class="image" style="line-height: 40px;">
                     <img   src="assets/image/testimonio-01.jpg" alt="" class="img-responsive responsivo" />
                  
@@ -99,7 +145,7 @@ owl-carousel .product-thumb {
     text-align: center;
     border: none !important;
 }
-</style>
+</style>-->
 
 <!--
 <div class="container">
