--- a/src/app/components/categoria-filtrada/categoria-filtrada.component.html
+++ b/src/app/components/categoria-filtrada/categoria-filtrada.component.html
@@ -60,7 +60,7 @@
               </div>
           </div>
 
-
+          <button type="button" class="btn btn-primary">Nueva búsqueda</button>
         </aside>
         <!--Left Part End -->
 
